[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/rocket.png" type="Texture" id=1]
[ext_resource path="res://scripts/Rocket.gd" type="Script" id=2]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.00990099, 0.990909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 0.435294, 0.435294, 0.435294, 1 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.5, 8.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 55, 10.5 )

[sub_resource type="Animation" id=5]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.62222, 2.16 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "pulsate"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.62222, 2.16 ), Vector2( 3, 3 ), Vector2( 2.62222, 2.16 ) ]
}

[node name="Rocket" type="KinematicBody2D"]
visible = false
collision_mask = 0
script = ExtResource( 2 )

[node name="Parts" type="CPUParticles2D" parent="."]
position = Vector2( -61, -1 )
emitting = false
amount = 12
lifetime = 0.5
local_coords = false
direction = Vector2( -1, 0 )
gravity = Vector2( 0, 0 )
initial_velocity = 56.0
angular_velocity = 100.0
angular_velocity_random = 1.0
scale_amount = 25.0
scale_amount_curve = SubResource( 3 )
color = Color( 0.756863, 0.756863, 0.756863, 1 )
color_ramp = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2, 1 )
scale = Vector2( 2.62222, 2.16 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -2.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -6, -2.5 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "pulsate"
anims/RESET = SubResource( 5 )
anims/pulsate = SubResource( 6 )

[node name="Onscreen" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2, -1.5 )
scale = Vector2( 5.9, 1.15 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_entered" from="Onscreen" to="." method="_on_Onscreen_screen_entered"]
